# MCP-GITLAB

./: .env.example  Dockerfile  README.md  pyproject.toml  server.py
